==> harviswang/DJYOS/djysdk/djysrc/bsp/cpudrv/stm32/src/cpu_peri_uart.c <==
#include "config-prj.h"
#include "stdint.h"
#include "string.h"
#include "errno.h"
#include "systime.h"
#include "cpu_peri.h"
#include "uart.h"
#include "int.h"
#include "djyos.h"
#define CN_UART1_BASE 0x40013800
#define CN_UART2_BASE 0x40004400
#define CN_UART3_BASE 0x40004800
#define CN_UART4_BASE 0x40004c00
#define CN_UART5_BASE 0x40005000
#define CN_DMA_UNUSED   0
#define CN_DMA_USED     1
#define UART1_SendBufLen            32
#define UART1_RecvBufLen            32
#define UART1_DmaBufLen             32
#define UART2_SendBufLen            32
#define UART2_RecvBufLen            32
#define UART2_DmaBufLen             32
#define UART3_SendBufLen            32
#define UART3_RecvBufLen            32
#define UART3_DmaBufLen             32
#define UART4_SendBufLen            32
#define UART4_RecvBufLen            32
#define UART5_SendBufLen            32
#define UART5_RecvBufLen            32

static void __UART_BaudSet(tagUartReg volatile *Reg,u32 port,u32 baud)
{
    u32 temp1,temp2;
    if((port == CN_UART1) || (port == CN_UART5))
    {
        temp1 = CN_CFG_PCLK2/(16*baud);
        temp2 = CN_CFG_PCLK2%(16*baud);
        temp2 = temp2/baud;
    }
    else
    {
        temp1 = CN_CFG_PCLK1/(16*baud);
        temp2 = CN_CFG_PCLK1%(16*baud);
        temp2 = temp2/baud;
    }
    Reg->BRR =  ((u16)temp1<<4)+(u16)temp2;
}

static void __UART_ComConfig(tagUartReg volatile *Reg,u32 port,ptu32_t data)
{
    struct tagCOMParam *COM;
    if((data == 0) || (Reg == NULL))
        return;
    COM = (struct tagCOMParam *)data;
    __UART_BaudSet(Reg,port,COM->BaudRate);

    switch(COM->DataBits)               // data bits
    {
    case CN_UART_DATABITS_8:    Reg->CR1 &= ~(1<<12);break;
    case CN_UART_DATABITS_9:    Reg->CR1 |= (1<<12);;break;
    default:break;
    }

    switch(COM->Parity)                 // parity
    {
    Reg->CR1 |= (1<<10);                // enable parity
    case CN_UART_PARITY_ODD:    Reg->CR1 |= (1<<9);break;
    case CN_UART_PARITY_EVEN:   Reg->CR1 &=~(1<<9);break;
    default:break;
    }

    switch(COM->StopBits)               // stop bits
    {
    Reg->CR2 &= ~(3<<12);
    case CN_UART_STOPBITS_1:    Reg->CR2 |= (0<<12);break;
    case CN_UART_STOPBITS_1_5:  Reg->CR2 |= (1<<12);break;
    case CN_UART_STOPBITS_2:    Reg->CR2 |= (2<<12);break;
    default:break;
    }
}

static void __UART_IntInit(u32 SerialNo)
{
    u8 IntLine;
    if(SerialNo == CN_UART1)
        IntLine = CN_INT_LINE_USART1;
    else if(SerialNo == CN_UART2)
        IntLine = CN_INT_LINE_USART2;
    else if(SerialNo == CN_UART3)
        IntLine = CN_INT_LINE_USART3;
    else if(SerialNo == CN_UART4)
        IntLine = CN_INT_LINE_UART4;
    else if(SerialNo == CN_UART4)
        IntLine = CN_INT_LINE_UART5;
    else
        return;

    uint32_t UART_ISR(ufast_t uart_int_line);
    Int_SetClearType(IntLine,CN_INT_CLEAR_PRE);
    Int_IsrConnect(IntLine,UART_ISR);
    Int_SettoAsynSignal(IntLine);
    Int_ClearLine(IntLine);
    Int_RestoreAsynLine(IntLine);
}

static void __UART_HardInit(u8 SerialNo)
{
    if(SerialNo > CN_UART5)
        return;
    __UART_GpioConfig(SerialNo);
    //系统初始化时已经使中断处于禁止状态，无需再禁止和清除中断。
   //初始化uart硬件控制数据结构
    tg_UART_Reg[SerialNo]->CR1 = 0x20ac;
    tg_UART_Reg[SerialNo]->CR2 = 0x0;
    tg_UART_Reg[SerialNo]->CR3 = 0x0000;
    __UART_BaudSet(tg_UART_Reg[SerialNo],SerialNo,115200);
}

static u32 __UART_SendStart (tagUartReg *Reg,u32 timeout)
{
    u8 port,dmaused;

    switch((u32)Reg)
    {
    case CN_UART1_BASE:
        dmaused = s_UART1_DmaUsed;
        port = CN_UART1;    break;
    case CN_UART2_BASE:
        dmaused = s_UART2_DmaUsed;
        port = CN_UART2;    break;
    case CN_UART3_BASE:
        dmaused = s_UART3_DmaUsed;
        port = CN_UART3;    break;
    case CN_UART4_BASE:
        dmaused = CN_DMA_UNUSED;
        port = CN_UART4;    break;
    case CN_UART5_BASE:
        dmaused = CN_DMA_UNUSED;
        port = CN_UART5;    break;
    default:return 0;
    }

    __UART_TxIntDisable(dmaused,port);
    if(dmaused)
    {
        __UART_DMA_SendStart(port);
    }
    else
    {
        //非DMA方式，只要使能发送空中断，则触发中断
    }

    __UART_TxIntEnable(dmaused,port);
    return 1;
}

static ptu32_t __UART_Ctrl(tagUartReg *Reg,u32 cmd, u32 data1,u32 data2)
{
    ptu32_t result = 0;
    u32 port;
    if(Reg == NULL)
        return 0;

    switch((u32)Reg)
    {
    case CN_UART1_BASE: port = CN_UART1;break;
    case CN_UART2_BASE: port = CN_UART2;break;
    case CN_UART3_BASE: port = CN_UART3;break;
    case CN_UART4_BASE: port = CN_UART4;break;
    case CN_UART5_BASE: port = CN_UART5;break;
    default:return 0;
    }

    switch(cmd)
    {
        case CN_UART_START:
            __UART_Enable(port);
            break;
        case CN_UART_STOP:
            __UART_Disable(port);
            break;
        case CN_UART_SET_BAUD:  //设置Baud
             __UART_BaudSet(Reg,port, data1);
            break;
        case CN_UART_EN_RTS:
            Reg->CR3 |= 0x100;
            break;
        case CN_UART_DIS_RTS:
            Reg->CR3 &= ~0x100;
            break;
        case CN_UART_EN_CTS:
            Reg->CR3 |= 0x200;
            break;
        case CN_UART_DIS_CTS:
            Reg->CR3 &= ~0x200;
            break;
        case CN_UART_DMA_USED:
            __UART_SetDmaUsed(port);
            break;
        case CN_UART_DMA_UNUSED:
            __UART_SetDmaUnUsed(port);
            break;
        case CN_UART_COM_SET:
            __UART_ComConfig(Reg,port,data1);
            break;
        default: break;
    }
    return result;
}

u32 UART_ISR(ufast_t IntLine)
{
    struct tagUartCB *UCB;
    tagUartReg *Reg;
    u32 num,port;
    u8 ch;

    switch(IntLine)
    {
    case CN_INT_LINE_USART1:   port = CN_UART1;  break;
    case CN_INT_LINE_USART2:   port = CN_UART2;  break;
    case CN_INT_LINE_USART3:   port = CN_UART3;  break;
    case CN_INT_LINE_UART4:    port = CN_UART4;   break;
    case CN_INT_LINE_UART5:    port = CN_UART5;   break;
    default:return 0;
    }

    UCB = pUartCB[port];
    Reg = (tagUartReg *)tg_UART_Reg[port];
    if(Reg->SR & (1<<5))            //接收中断
    {
        ch = (u8)Reg->DR;
        num = UART_PortWrite(UCB,&ch,1,0);
        if(num != 1)
        {
            UART_ErrHandle(UCB,CN_UART_BUF_OVER_ERR);
        }
    }
    if((Reg->SR & (1<<6)) &&(Reg->CR1 & (1<<7)))    //发送中断
    {
        num = UART_PortRead(UCB,&ch,1,0);
        if(num != 0)
            Reg->DR = ch;
        else
        {
            Reg->CR1 &= ~(1<<7);        //txeie
        }
    }
    if(Reg->SR & (1<<3))        //ORE过载错误
    {
        ch = (u8)Reg->DR;
        num = Reg->SR;     //读一下sr寄存器
        UART_ErrHandle(UCB,CN_UART_FIFO_OVER_ERR);
    }
    if(Reg->SR & (1<<4))
    {
        Reg->DR;
        Int_TapLine(CN_INT_LINE_DMA1_Ch5);
    }
    return 0;
}

ptu32_t ModuleInstall_UART(u32 serial_no)
{
    struct tagUartParam UART_Param;

    switch(serial_no)
    {
    case CN_UART1://串口0
        UART_Param.Name         = "UART1";
        UART_Param.Baud         = 115200;
        UART_Param.UartPortTag  = CN_UART1_BASE;
        UART_Param.TxRingBufLen = UART1_SendBufLen;
        UART_Param.RxRingBufLen = UART1_RecvBufLen;
        UART_Param.StartSend    = (UartStartSend)__UART_SendStart;
        UART_Param.DirectlySend = (UartDirectSend)__UART_SendDirectly;
        UART_Param.UartCtrl     = (UartControl)__UART_Ctrl;
        break;
    case CN_UART2://串口2
        UART_Param.Name         = "UART2";
        UART_Param.Baud         = 115200;
        UART_Param.UartPortTag  = CN_UART2_BASE;
        UART_Param.TxRingBufLen = UART2_SendBufLen;
        UART_Param.RxRingBufLen = UART2_RecvBufLen;
        UART_Param.StartSend    = (UartStartSend)__UART_SendStart;
        UART_Param.DirectlySend = (UartDirectSend)__UART_SendDirectly;
        UART_Param.UartCtrl     = (UartControl)__UART_Ctrl;
        break;
        break;
    case CN_UART3://串口3
        UART_Param.Name         = "UART3";
        UART_Param.Baud         = 115200;
        UART_Param.UartPortTag  = CN_UART3_BASE;
        UART_Param.TxRingBufLen = UART3_SendBufLen;
        UART_Param.RxRingBufLen = UART3_RecvBufLen;
        UART_Param.StartSend    = (UartStartSend)__UART_SendStart;
        UART_Param.DirectlySend = (UartDirectSend)__UART_SendDirectly;
        UART_Param.UartCtrl     = (UartControl)__UART_Ctrl;
        break;
        break;
    case CN_UART4://串口4
        UART_Param.Name         = "UART4";
        UART_Param.Baud         = 115200;
        UART_Param.UartPortTag  = CN_UART4_BASE;
        UART_Param.TxRingBufLen = UART4_SendBufLen;
        UART_Param.RxRingBufLen = UART4_RecvBufLen;
        UART_Param.StartSend    = (UartStartSend)__UART_SendStart;
        UART_Param.DirectlySend = (UartDirectSend)__UART_SendDirectly;
        UART_Param.UartCtrl     = (UartControl)__UART_Ctrl;
        break;
    case CN_UART5://串口5
        UART_Param.Name         = "UART5";
        UART_Param.Baud         = 115200;
        UART_Param.UartPortTag  = CN_UART5_BASE;
        UART_Param.TxRingBufLen = UART5_SendBufLen;
        UART_Param.RxRingBufLen = UART5_RecvBufLen;
        UART_Param.StartSend    = (UartStartSend)__UART_SendStart;
        UART_Param.DirectlySend = (UartDirectSend)__UART_SendDirectly;
        UART_Param.UartCtrl     = (UartControl)__UART_Ctrl;
        break;
    default:
        return 0;
    }

    //硬件初始化
    __UART_HardInit(serial_no);
    __UART_IntInit(serial_no);

    sUartInited |= (0x01 << serial_no);
    pUartCB[serial_no] = UART_InstallPort(&UART_Param);
    if( pUartCB[serial_no] == NULL)
        return 0;
    else
        return 1;
}

u32 Uart_SendServiceDirectly(char *str)
{
    u32 result = 0,len,timeout = 100*mS;
    tagUartReg *Reg;

    if(!strcmp(gc_pCfgStddevName,"UART1")&& (sUartInited & (0x01 << CN_UART1)))
        Reg = (tagUartReg*)CN_UART1_BASE;
    else if(!strcmp(gc_pCfgStddevName,"UART2")&& (sUartInited & (0x01 << CN_UART2)))
        Reg = (tagUartReg*)CN_UART2_BASE;
    else if(!strcmp(gc_pCfgStddevName,"UART3")&& (sUartInited & (0x01 << CN_UART3)))
        Reg = (tagUartReg*)CN_UART3_BASE;
    else if(!strcmp(gc_pCfgStddevName,"UART4")&& (sUartInited & (0x01 << CN_UART4)))
        Reg = (tagUartReg*)CN_UART4_BASE;
    else if(!strcmp(gc_pCfgStddevName,"UART5")&& (sUartInited & (0x01 << CN_UART5)))
        Reg = (tagUartReg*)CN_UART5_BASE;
    else
        return 0;
    len = strlen(str);

    Reg->CR1 &= ~(1<<7);                            //disable send INT
    for(result=0; result < len; result ++)
    {
        // 超时或者发送缓冲为空时退出
        while((false == __UART_TxTranEmpty(Reg))&& (timeout > 0))
        {
            timeout--;
            Djy_DelayUs(1);
        }
        if(timeout == 0)
            break;
        Reg->DR = str[result];
    }
    Reg->CR1 |= (1<<7);                         //enable send INT
    return result;
}
